--- a/Practica2/Practica2.html
+++ b/Practica2/Practica2.html
@@ -15,11 +15,11 @@
                      <br/>
                      <br/>
                      <label for="txtApaterno">Apellido Paterno</label><br/>
-                     <input type="text" size="40" maxlength="255" id="txtApaterno" name="Apellido Paterno"  />
+                     <input type="text" size="40" maxlength="255" id="txtApaterno" name="ApellidoPaterno"  />
                      <br/>
                      <br/>
 					 <label for="txtAmaterno">Apellido Materno</label><br/>
-                     <input type="text" size="40" maxlength="255" id="txtAmaterno" name="Apellido Materno"  />
+                     <input type="text" size="40" maxlength="255" id="txtAmaterno" name="ApellidoMaterno"  />
                      <br/>
                      <br/>
 		
@@ -35,7 +35,7 @@
                      <br/>
                      <br/>
 					 <label for="txtCodigoPOstal">Codigo Postal</label><br/>
-                     <input type="text" size="40" maxlength="255" id="txtAmaterno" name="C&oacutedigo Postal"  />
+                     <input type="text" size="40" maxlength="255" id="Cp" name="CodigoPostal"  />
                      <br/>
                      <br/>
 					 
